# led_ctrl

./: flake.nix  justfile  rust-toolchain.toml
fw/: Cargo.toml  memory.x
fw/.cargo/: config.toml
fw/src/: main.rs
hw/: led_channel.kicad_sch  led_ctrl.kicad_pcb  led_ctrl.kicad_prl  led_ctrl.kicad_pro
hw/libs/easyeda/: easyeda.kicad_sym
hw/libs/easyeda/easyeda.pretty/: SOT-23-3_L2.9-W1.6-P1.90-LS2.8-BR.kicad_mod
hw/production/: bom.csv  designators.csv  netlist.ipc
led_ctrl/: fp-info-cache  led_ctrl.kicad_sch  ~led_ctrl.kicad_pcb.lck
led_ctrl/libs/easyeda/easyeda.pretty/: LQFP-48_L7.0-W7.0-P0.50-LS9.0-BL.kicad_mod  SOT-23-3_L2.9-W1.3-P1.90-LS2.4-BR.kicad_mod
led_ctrl/production/: positions.csv
